--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "homepage":".",
+  "homepage": ".",
   "name": "sample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "google-maps-react": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -17,8 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
